mdapipkg/unpackaged/objects/LearningPlanCourseEnrollment__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment</label>
        <referenceTo>Enrolment__c</referenceTo>
        <relationshipLabel>LearningPlanCourseEnrollments</relationshipLabel>
        <relationshipName>LearningPlanCourseEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LearningPlanEnrollment__c</fullName>
        <label>LearningPlanEnrollment</label>
        <referenceTo>LearningPlanEnrollment__c</referenceTo>
        <relationshipLabel>LearningPlanCourseEnrollments</relationshipLabel>
        <relationshipName>LearningPlanCourseEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LearningPlanCourseEnrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>LearningPlanCourseEnrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LearningPlanCourseEnrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>